[package]
name = "yewpb"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["YewFence"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.12"
dotenvy = "0.15.7"
shlex = "1.3"
wait-timeout = "0.2"
rayon = "1.10"
indicatif = "0.17"
edit = "0.1.5"
clap-markdown = "0.1.5"
